--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -6,9 +6,6 @@ on:
   push:
     tags:
       - 'v*'
-env:
-  NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
 jobs:
   npm-publish:
     runs-on: ubuntu-latest
@@ -20,6 +17,7 @@ jobs:
           registry-url: https://registry.npmjs.org/
       - run: yarn
       - run: yarn build
+      - run: yarn config set //registry.npmjs.org/:_authToken ${{ env.NODE_AUTH_TOKEN }}
       - run: yarn publish --access=public
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
