--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@nervos/layer2-integration",
-  "version": "0.0.1",
+  "name": "layer2-integration",
+  "version": "0.0.8",
   "license": "MIT",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -16,8 +16,12 @@
     "ckb-js-toolkit": "^0.10.2"
   },
   "devDependencies": {
-    "typescript": "^4.2.4",
-    "@types/elliptic": "^6.4.13"
+    "@types/elliptic": "^6.4.13",
+    "typescript": "^4.2.4"
+  },
+  "publishConfig": {
+    "access": "public",
+    "registry": "http://registry.npmjs.org/"
   },
   "repository": {
     "type": "git",
