--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "layer2-integration",
+  "name": "nervos-layer2-integration",
   "version": "0.0.8",
   "license": "MIT",
   "main": "lib/index.js",
