--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "build": "tsc"
   },
   "dependencies": {
-    "@ckb-lumos/base": "^0.16.0",
-    "@ckb-lumos/helpers": "^0.16.0",
+    "@ckb-lumos/base": "0.17.0-rc5",
+    "@ckb-lumos/helpers": "0.17.0-rc5",
     "@lay2/pw-core": "0.4.0-alpha.9",
     "@nervosnetwork/ckb-types": "^0.39.0",
-    "ckb-js-toolkit": "^0.10.2",
+    "ckb-js-toolkit": "0.10.2",
     "ethers": "^5.4.1",
     "json-rpc-2.0": "^0.2.16"
   },
