--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "resolveJsonModule": true,
     "declaration": true,
     "strict": true,
-    "target": "ESNext",
+    "target": "ES2020",
     "outDir": "lib",
     "rootDir": "src",
     "types": [
