--- a/src/config/config.json
+++ b/src/config/config.json
@@ -1,5 +1,6 @@
 {
   "ckb_url": "https://testnet.ckb.dev",
+  "rpc_url": "https://godwoken-testnet-web3-rpc.ckbapp.dev",
   "indexer_url": "https://testnet.ckb.dev/indexer",
   "chain": {
     "rollup_type_script": {
