--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "build": "tsc"
   },
   "dependencies": {
-    "@ckb-lumos/base": "^0.18.0-rc1",
-    "@ckb-lumos/helpers": "^0.18.0-rc1",
+    "@ckb-lumos/base": "0.17.0-rc5",
+    "@ckb-lumos/helpers": "0.17.0-rc5",
     "@lay2/pw-core": "0.4.0-alpha.9",
     "@nervosnetwork/ckb-types": "^0.39.0",
     "ckb-js-toolkit": "^0.10.2",
