--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
   "dependencies": {
     "@ckb-lumos/base": "0.17.0-rc5",
     "@ckb-lumos/helpers": "0.17.0-rc5",
-    "@lay2/pw-core": "0.4.0-alpha.10",
+    "@lay2/pw-core": "0.4.0-alpha.12",
     "@nervosnetwork/ckb-types": "^0.39.0",
-    "@polyjuice-provider/web3": "^0.0.1-rc11",
+    "@polyjuice-provider/web3": "^0.1.0",
     "ckb-js-toolkit": "^0.10.2",
     "ethers": "^5.4.1",
     "json-rpc-2.0": "^0.2.16",
