--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   },
   "dependencies": {
     "@ckb-lumos/lumos": "0.17.0-rc7",
-    "@lay2/pw-core": "0.4.0-alpha.12",
+    "@ckitjs/base": "0.1.0",
+    "@ckitjs/ckit": "0.1.0",
+    "@ckitjs/utils": "0.1.0",
     "@nervosnetwork/ckb-types": "0.101.0",
     "@polyjuice-provider/web3": "0.1.3",
     "ckb-js-toolkit": "^0.10.2",
