--- a/package.json
+++ b/package.json
@@ -12,16 +12,16 @@
     "test": "jest"
   },
   "dependencies": {
-    "@ckb-lumos/lumos": "0.17.0-rc7",
+    "@ckb-lumos/lumos": "0.17.0-rc8",
     "@ckitjs/base": "0.1.0",
     "@ckitjs/ckit": "0.1.0",
     "@ckitjs/utils": "0.1.0",
     "@nervosnetwork/ckb-types": "0.101.0",
-    "@polyjuice-provider/web3": "0.1.3",
-    "ckb-js-toolkit": "^0.10.2",
+    "@polyjuice-provider/base": "0.1.3",
+    "@polyjuice-provider/godwoken": "0.1.3",
+    "ckb-js-toolkit": "0.10.2",
     "ethers": "^5.4.1",
-    "json-rpc-2.0": "^0.2.16",
-    "web3": "^1.5.2"
+    "json-rpc-2.0": "^0.2.16"
   },
   "devDependencies": {
     "@types/elliptic": "^6.4.13",
