--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@ckitjs/base": "0.1.0",
     "@ckitjs/ckit": "0.1.0",
     "@ckitjs/utils": "0.1.0",
+    "@lay2/pw-core": "^0.4.0-alpha.8",
     "@nervosnetwork/ckb-types": "0.101.0",
     "@polyjuice-provider/base": "0.1.3",
     "@polyjuice-provider/godwoken": "0.1.3",
