--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@ckitjs/ckit": "0.1.0",
     "@ckitjs/utils": "0.1.0",
     "@lay2/pw-core": "^0.4.0-alpha.8",
+    "@metamask/eth-sig-util": "^4.0.0",
     "@nervosnetwork/ckb-types": "0.101.0",
     "@polyjuice-provider/base": "0.1.3",
     "@polyjuice-provider/godwoken": "0.1.3",
@@ -27,8 +28,8 @@
   "devDependencies": {
     "@types/elliptic": "^6.4.13",
     "@types/jest": "^27.4.0",
-    "jest": "^27.4.7",
-    "ts-jest": "^27.1.2",
+    "jest": "27.5.1",
+    "ts-jest": "27.1.3",
     "ts-node": "^10.4.0",
     "typescript": "^4.2.4"
   },
